// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Infobar/> onSearchResultClick() should reset spinner and keep customer empty on fetch customer failure 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="m-3"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          <i
            class="material-icons md-2 mr-2"
          >
            arrow_back
          </i>
          Back
        </button>
      </div>
      <div
        data-testid="InfobarSearchResultsList"
      >
        <div>
          errorMessage: 
        </div>
        <div>
          defaultCustomerId: 
          2
        </div>
        <div>
          searchResults: 
          []
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render current customer with suggested customer 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
      <div
        class="d-none d-md-block"
      >
        <div
          class="infobarSectionSeparator"
        />
        <div
          class="suggestedCustomer"
        >
          <h4>
            Is this the same person?
          </h4>
          <p>
            'We have found someone similar to the customer of this ticket. If it is the same person, merge them together to get a unified view of this customer.
          </p>
          <div
            style="margin-bottom: 30px;"
          >
            <button
              class="mr-2 btn btn-primary"
              type="button"
            >
              <i
                class="material-icons mr-1"
              >
                call_merge
              </i>
              Merge
            </button>
          </div>
          <div
            data-testid="InfobarCustomerInfo"
          >
            InfobarCustomerInfo
            <div>
              customer: 
              {"id":10}
            </div>
          </div>
          <div>
            MergeCustomersContainer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render customer context 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render loading state because the customer is being fetched 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="inner"
          style="min-height: 500px;"
        >
          <i
            class="icon-custom icon-circle-o-notch md-spin"
            style="font-size: 40px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render loading state because the search is in progress 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="inner"
          style="min-height: 500px;"
        >
          <i
            class="icon-custom icon-circle-o-notch md-spin"
            style="font-size: 40px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render search results 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="m-3"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          <i
            class="material-icons md-2 mr-2"
          >
            arrow_back
          </i>
          Back
        </button>
      </div>
      <div
        data-testid="InfobarSearchResultsList"
      >
        <div>
          errorMessage: 
        </div>
        <div>
          defaultCustomerId: 
          2
        </div>
        <div>
          searchResults: 
          [{"id":8},{"id":9}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render selected customer 1`] = `
<div>
  <div
    data-testid="InfobarLayout"
  >
    <div
      class="infobarContent"
    >
      <div
        class="infobarSearchWrapper d-flex align-items-center justify-content-between"
      >
        <input
          data-testid="Search"
          placeholder="Search for customers by email, order number, etc."
          searchdebouncetime="200"
          style="max-width: none;"
          tabindex="10"
        />
        <button
          class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary disabled"
          disabled=""
          id="toggle-widgets-edition-button"
          type="button"
        >
          <i
            class="material-icons md-2"
          >
            settings
          </i>
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="m-3"
        >
          <button
            class="btn btn-secondary"
            type="button"
          >
            <i
              class="material-icons md-2 mr-2"
            >
              arrow_back
            </i>
            Back
          </button>
          <div
            class="float-right d-none d-md-block"
          >
            <button
              class="btn btn-secondary"
              type="submit"
            >
              Merge
            </button>
          </div>
        </div>
        <div
          data-testid="InfobarCustomerInfo"
        >
          InfobarCustomerInfo
          <div>
            customer: 
            {"id":7}
          </div>
        </div>
        <div>
          MergeCustomersContainer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render the error when loading error 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        class="m-3"
      >
        <button
          class="btn btn-secondary"
          type="button"
        >
          <i
            class="material-icons md-2 mr-2"
          >
            arrow_back
          </i>
          Back
        </button>
      </div>
      <div
        data-testid="InfobarSearchResultsList"
      >
        <div>
          errorMessage: 
          Failed to do the search. Please try again.
        </div>
        <div>
          defaultCustomerId: 
          2
        </div>
        <div>
          searchResults: 
          []
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render ticket context 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary"
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Infobar/> should render widgets edition mode 1`] = `
<div
  data-testid="InfobarLayout"
>
  <div
    class="infobarContent"
  >
    <div
      class="infobarSearchWrapper d-flex align-items-center justify-content-between"
    >
      <input
        data-testid="Search"
        placeholder="Search for customers by email, order number, etc."
        searchdebouncetime="200"
        style="max-width: none;"
        tabindex="10"
      />
      <button
        class="toggleWidgets d-none d-md-inline-block ml-2 btn-transparent btn btn-secondary active disabled"
        disabled=""
        id="toggle-widgets-edition-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          settings
        </i>
      </button>
    </div>
    <div
      class="content"
    >
      <div
        data-testid="InfobarCustomerInfo"
      >
        InfobarCustomerInfo
        <div>
          customer: 
          {"id":2}
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      class="mr-2 btn btn-success disabled"
      disabled=""
      type="button"
    >
      Save changes
    </button>
    <button
      class="btn btn-secondary disabled"
      disabled=""
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;
